erDiagram
  promotions ||--o{ product_categories : belongs_to
  categories ||--o{ product_categories : contains

  promotions ||--o{ promotion_rules : has
  promotions ||--o{ promotion_applicable_products : includes
  promotions ||--o{ promotion_applicable_categories : includes

    promotions {
      uuid id PK "uuid"
      string name "varchar"
      enum status  "draft|active|paused|ended   default draft"
      timestamp starts_at "timestamp"
      timestamp ends_at "timestamp"
      enum discount_type "Percent|Fixed  default Percent"
      int discount_value "ex. 10(%) หรือ 50(บาท) default 0"
      int max_discount_amount  "nullable เพดานส่วนลดเมื่อเป็น % default 0" 
      int priority  "ใช้จัดลำดับ (รองจาก “ให้ส่วนลดมากสุด”) default 0"
      timestamp created_at "Optional default DateNow"
      timestamp updated_at "Optional default DateNow"
    }

     %%  เงื่อนไขระดับกฎ เช่น min_qty, min_order_amount (ขยายได้ภายหลัง)
    promotion_rules {
      uuid id PK
      uuid promotion_id FK
      enum scope   "product|category"  
      int min_qty   "nullable"
      int min_amount   "nullable"
    }

    promotion_applicable_products{
      uuid id PK
      uuid promotion_id FK
      uuid product_id FK
    }
  
    promotion_applicable_categories {
      uuid id PK 
      uuid promotion_id FK
      uuid category_id FK
      bool include_children "หมวดซ้อนย่อย default true"
    }

    products {
      uuid id PK
      string code "unique"
      string name
      text description
      int price
      enum status  "active|inactive|deleted"
      timestamp created_at
      timestamp updated_at
    }

    categories {
      uuid id PK
      string name
      uuid parent_id FK "nullable"
      %% int lft
      %% int rgt
      uuid ancestors "jsonb uuid[] NOT NULL DEFAULT '{}'"
    }


    product_categories {
      uuid id PK
      uuid product_id FK
      uuid category_id FK
      %% เพิ่ม index unique "(product_id, category_id) unique"
    }
